--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               </div>
               <div class="row">Timer:   
                 <div id="time"> </div>
-                <div id="main"></div>
+                <div></div>
               </div> 
     </header>
     <!--Page Header Ends-->
