Corrected formatting/styling and edited README.md.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
               <div class="col text-left">
                 <button class="btn" id=highscorebtn href="">View Highscores</button>
               </div>
-              <div class="row">Timer:   
-                <div id="time"> </div>
-                <div></div>
-              </div> 
+              <div></div>
+              <div class="col text-right" id="time">Timer</div> 
     </header>
     <!--Page Header Ends-->
     <body>
@@ -36,7 +34,7 @@
                 <!--Start Content Display Begins-->
                 <div id="startDisplay">
                     <div class="row text-center">
-                        <div class="col text-center">
+                        <div class="col-md-12 text-center">
                             <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds.</p>
                             <button class="btn btn-primary" id="startButton">Start</button>
                         </div>
@@ -48,14 +46,14 @@
             <!--Start Question Content Display Begins-->
             <div class="row">
                 <div class="col"></div>
-                    <div class="col">
+                    <div class="col-md-12 text-center">
                         <ul id="qa"></ul>
                     </div>
                 <div class="col"></div>
             </div>    
             <div class="row">
                 <div class="col"></div>
-                    <div class="col">  
+                    <div class="col-md-12 text-center">  
                         <div id="answerCheck"></div>  
                     </div>
                 <div class="col"></div>
@@ -65,7 +63,7 @@
             <!--Highscore Content Input Begins-->
                 <div class="row">
                     <div class="col"></div>
-                        <div class="col">  
+                        <div class="col-md-12 text-center">  
                             <div id="highscoreContent"></div>  
                         </div>
                     <div class="col"></div>
@@ -76,7 +74,7 @@
             <!--Highscore Display Content Begins-->
             <div class="row">
                 <div class="col"></div>
-                    <div class="col">  
+                    <div class="col-md-12 text-center">  
                         <div id="highscoreDisplay"></div>  
                     </div>
                 <div class="col"></div>
