Added quotation marks around highscorebtn id on Line 18.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="container">
             <div class="row">
               <div class="col text-left">
-                <button class="btn" id=highscorebtn>View Highscores</button>
+                <button class="btn" id="highscorebtn">View Highscores</button>
               </div>
               <div></div>
               <div class="col text-right" id="time">Timer</div>
